<resources>
    <string name="app_name">Map basic</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_locations">Locations</string>
    <string name="title_activity_directions">Directions</string>
    <string name="key_google_api" translatable="false">AIzaSyBFxXP2wHUUyCeoKfm6aPP_sJpqZSHAAJQ</string>
    <string name="title_home">Home</string>
    <string name="title_navi_map">Map</string>
    <string name="title_navi_store">Store</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="fragment_maps_btn_marker">Marker</string>
    <string name="fragment_maps_btn_driving">Driving</string>
    <string name="fragment_maps_btn_reserve">Reserve</string>
    <string name="fragment_maps_sw_sync">Sync</string>
    <string name="title_stores">Store</string>
    <string name="store_menu_item_location">Locations</string>
    <string name="store_menu_item_direction">Directions</string>
    <string name="store_menu_item_sos">SOS</string>
    <string name="activity_location_detail_btn_save">Save</string>
    <string name="title_activity_location_detail_txt_name">Location detail</string>
    <string name="activity_location_detail_txt_name">Location name</string>
    <string name="activity_location_detail_txt_description">Description</string>
    <string name="alert_dialog_button_ok">OK</string>
    <string name="message_success">Success</string>
    <string name="message_failed">Failure</string>
    <string name="message_waiting">Please wait a moment…</string>
    <string name="locations_context_menu_item_edit">Edit</string>
    <string name="locations_context_menu_item_remove">Remove</string>
    <string name="confirm_title_remove">Remove</string>
    <string name="confirm_content_remove">Are you sure?</string>
    <string name="confirm_title_logout">Logout</string>
    <string name="confirm_content_logout">Are you sure?</string>
    <string name="confirm_btn_ok">Yes</string>
    <string name="confirm_btn_no">No</string>

</resources>