<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_stores">

    <fragment
        android:id="@+id/navigation_map"
        android:name="net.thangvnnc.appmap.ui.map.MapsFragment"
        android:label="@string/title_navi_map"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/navigation_stores"
        android:name="net.thangvnnc.appmap.ui.stores.StoresFragment"
        android:label="@string/title_navi_store"
        tools:layout="@layout/fragment_stores" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="net.thangvnnc.appmap.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>