<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.stores.locations.LocationsActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:text="@string/activity_location_detail_txt_name"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edtLocationName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:gravity="top"
            android:inputType="textMultiLine"
            android:hint="379/52/15b Quang Trung, P10, Gò Vấp, TP.HCM"
            android:minLines="3"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:text="@string/activity_location_detail_txt_description"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edtLocationDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:gravity="top"
            android:hint="Ghi chú nội dung cho vị trí này"
            android:minLines="10"
            android:textSize="18sp"
            android:inputType="textMultiLine"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/activity_location_detail_btn_save"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>